--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "antd": "^3.15.0",
     "node-sass": "^4.11.0",
     "nouislider": "^13.1.1",
     "react": "^16.8.4",
